--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,21 @@
 .output-area {
   display: none;
 }
+
+#main-logo {
+  width: 500px;
+  float: right;
+  position: relative;
+  top: -100px;
+}
+
+.jumbotron {
+  height: 350px;
+}
+
+.mybox {
+  margin: 12px;
+  border: 2px;
+  padding: 4px;
+  background-color: lightgreen;
+}
