--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,14 @@
   width: 500px;
   float: right;
   position: relative;
-  top: -100px;
+  top: -75px;
+}
+
+#mini-logo {
+  width: 300px;
+  float: left;
+  /* position: relative; */
+  /* top: -100px; */
 }
 
 .jumbotron {
